# DelaunayMatch

./: CMakeLists.txt  README.md  _c_triangle.cpp  _c_triangle.h  _c_triangle_net.cpp  _c_triangle_net.h  _c_trianglenet.cpp  _sc_calculator.cpp  _sc_calculator.h  calculator.cpp  calculator.h  delaunay_match.cpp  delaunaydetect.cpp
qmake/: CMakeCache.txt  Makefile  cmake_install.cmake  delaunayDetect  delaunayDetect.cbp
